<resources>
    <string name="app_name">New_Project2</string>
    <string name="_30">30%</string>
    <string name="_70">70%</string>
    <string name="_60">60%</string>
    <string name="user">User</string>
    <string name="_40">40%</string>
    <string name="day_4">Day 4</string>
    <string name="day_3">Day 3</string>
    <string name="day_2">Day 2</string>
    <string name="day_1">Day 1</string>
    <string name="new_project">New Project</string>
    <string name="welcome_tocure_lives">Welcome to Cure Lives</string>
    <string name="email_address">Email Address</string>
    <string name="pass">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="reg">Register Now</string>
    <string name="training">Training</string>
    <string name="simple_list_view">Simple List View</string>
    <string name="custom_list_view">Custom List View</string>
    <string name="expandable_list_view">Expandable List View</string>
    <string name="next_project_comes_here">Next Project Comes Here</string>
    <string name="expandablelistview">ExpandableListView</string>
    <string name="list_views">List Views</string>
    <string name="Song">Play Song</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="enter_seconds">Enter Seconds</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="day_5">DAY 5</string>
    <string name="day_6">DAY 6</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_1_replaced_nby_this_fragment_2">Fragment 1 replaced \nBy This Fragment 2</string>
    <string name="fragment_1_created">Fragment 1 Created</string>
    <string name="press">Press</string>
    <string name="title_activity_main12">Main12Activity</string>
    <string name="back">Back</string>

</resources>
