<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ruby.new_project2.day_3_project.Main4Activity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffbfb"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:titleTextColor="@color/colorPrimaryDark"
        android:background="@color/colorAccent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_project"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_horizontal"
            />

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/welcome_tocure_lives"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:hint="@string/email_address"
        android:textColor="#585858"
        android:singleLine="true"
        android:id="@+id/id"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:hint="@string/pass"
        android:textColor="#585858"
        android:singleLine="true"
        android:id="@+id/pass"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:text="@string/remember_me" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:text="@string/forget_password"
            android:textColor="@color/colorAccent" />
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/circular_button"
        android:padding="8dp"
        android:text="@string/login"
        android:onClick="login"
        android:textColor="#ffffff"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/circular_button"
            android:padding="8dp"
            android:text="@string/reg"
            android:textColor="#ffffff" />


    </LinearLayout>


</LinearLayout>

</ScrollView>