<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ruby.new_project2.week_2_day_1.Main8Activity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Song"
        android:textSize="25sp"
        android:gravity="center"
        android:id="@+id/heading"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="40sp"
        android:hint="@string/enter_seconds"
        android:gravity="center"
        android:id="@+id/ed1"
        android:inputType="number"
        android:layout_below="@id/heading"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_remaining"
        android:textSize="15sp"
        android:gravity="center"
        android:id="@+id/tv1"
        android:layout_below="@id/ed1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear1"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buttonStart"
            android:text="@string/start_service" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buttonStop"
            android:text="@string/stop_service" />

    </LinearLayout>

    <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:id="@+id/v1"
    android:layout_below="@id/linear1"
    android:background="#000"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
        />


</RelativeLayout>
